<resources>
    <string name="package_name" translatable="false">net.movelab.cmlibrary</string>
    <string name="internal_message_id" translatable="false">net.movelab.cmlibrary</string>
    <string name="content_provider_authority_uploadqueue" translatable="false">net.movelab.cmlibrary.uploadqueueprovider</string>
    <string name="content_provider_authority_fixes" translatable="false">net.movelab.cmlibrary.spacemapperfixprovider</string>
    <string name="app_name" translatable="false">Campus Mobility</string>
    <string name="user_guide_html" translatable="FALSE">
<![CDATA[
under constuction
     ]]>
    </string>
    <string name="expert_title">Mode d’expert</string>
    <string name="normal_title">Mode normal</string>
    <string name="enter_expert">Vols entrar al mode d’expert?</string>
    <string name="exit_expert">Vols sortir del mode d’expert?</string>
    <string name="popup_a">"Hola! Les dades que estàs generant estan sent correctament registrades! T\'animem a seguir amb la prova durant la resta de la setmana. Moltes gràcies per la teva col·laboració; la participació dels voluntaris és clau per a conèixer la mobilitat de la comunitat universitària!"</string>
    <string name="popup_a_title">Campus Mobility</string>
    <string name="popup_a_ticker">Gràcies de Campus Mobility</string>
    <string name="popup_b1">"Hola! La teva participació al projecte Campus Mobility està sent un èxit. La teva informació ha estat correctament registrada durant 3 dies. T\'animem a seguir amb la prova durant la resta de la setmana. Moltes gràcies per la teva col·laboració; la participació dels voluntaris és clau per a conèixer la mobilitat de la comunitat universitària!"</string>
    <string name="popup_b1_title">Campus Mobility</string>
    <string name="popup_b1_ticker">Gràcies de Campus Mobility</string>
    <string name="popup_b2">"Hola! Et vas instal·lar l\'app Campus Mobility però no estem rebent les teves dades correctament. Si estàs tenint problemes amb l\'app, dirigeix-te a gemott@uab.cat. Moltes gràcies per la teva col·laboració!"</string>
    <string name="popup_b2_title">Campus Mobility</string>
    <string name="popup_b2_ticker">No estem rebent les teves dades</string>
    <string name="popup_c1">"Hola! Ens podries dir quin ha estat el mitjà de transport principal que has utilitzat en el teu darrer desplaçament?"</string>
    <string name="popup_c2">"Moltes gràcies per la teva col·laboració!"</string>
    <string-array name="popup_transport_mode_array">
        <item>       </item>
        <item>Cap desplaçament</item>
        <item>Caminant</item>
        <item>Amb bicicleta</item>
        <item>Amb transport privat</item>
        <item>Amb tren, ferrocarril o metro</item>
        <item>Amb autobús</item>
    </string-array>
    <string name="popup_c_title">Campus Mobility</string>
    <string name="popup_c_ticker">Mode de transport</string>
    <string name="survey">Enquesta</string>
    <string name="email">Correu electrònic</string>
    <string name="email_hint">correu electrònic</string>
    <string name="password">Contrasenya</string>
    <string name="password_hint">contrasenya</string>
    <string name="visit_website">Web</string>
        <string name="no_sharing_msg">En aquests moments no s\'estan guardant dades i les funcions d\'intercanvi de dades s\'han deshabilitat. Si us plau, consulteu el lloc web del projecte per a més informació. Moltes gràcies pel vostre interès!</string>
    <string name="end_research_msg">La recol·lecció de dades ha finalitzat de manera que aquesta aplicació ja no comparteix les seves dades amb l\'equip de recerca, però si voleu, podeu continuar utilitzant l\'aplicació.  Si us plau, consulteu el lloc web del projecte per a més informació. Moltes gràcies per la vostra participació en aquest projecte!</string>
    <string name="on">Encès</string>
    <string name="off">Apagat</string>
    <string name="warning_calendar_start_date">Avís: Has escollit una data d\'inici posterior a la data de finalització. Canvia una o l\'altra, per veure les dades al mapa.</string>
    <string name="warning_calendar_end_date">Avís: Has escollit una data de finalització anterior a la data d\'inici. Canvia una o l\'altra, per veure les dades al mapa.</string>
    <string name="save_db_label">Enviar</string>
    <string name="pro_welcome">T\'acabes d\'actualitzar gratuïtament a Campus Mobility Pro. Pots deixar de participar en el Activity-Space Project en qualsevol moment canviant la configuració de la teva participació al menú Preferències.\n\nMoltes gràcies!</string>
    <string name="dbq_battery_prompt">Has tingut problemes amb la durada de la bateria del telèfon mentre s\'utilitza l\'aplicació?</string>
    <string name="db_howfound_friend">D\'un amic o conegut</string>
    <string name="db_howfound_ad">D\'un anunci</string>
    <string name="db_howfound_market">En el Google Play</string>
    <string name="db_howfound_other">Altre</string>
    <string name="db_heading">Enquesta</string>
    <string name="db_subheading">Si tens un moment, agraïrem els teus comentaris!</string>
    <string name="dbq_howfound_prompt">Com es va assabentar d\'aquesta aplicació? (Pots marcar-ne més d\'una.)</string>
    <string name="dbq_friends_prompt">Coneixes algú més que faci servir l\'aplicació?</string>
    <string name="dbq_behavior1_prompt">Creus que aquesta aplicació  pot haver modificat el teu comportament?</string>
    <string name="dbq_behavior2_prompt">Has pensat en que aquesta aplicació s\'estava executant en el teu dia a dia?</string>
    <string name="proconversion_notification_initial">Actualització de Campus Mobility</string>
    <string name="proconversion_notification_subject">Actualització de Campus Mobility</string>
    <string name="proconversion_notification">Has rebut una actualització gratuïta a Campus Mobility Pro.</string>
    <string name="offline_warning">T\'ha desconnectat Internet. Si us plau, comprova la teva connexió a Internet i torna-ho a intentar.</string>
    <string name="uploading">Carrega</string>
    <string name="location">localització</string>
    <string name="locations">localitzacions</string>
    <string name="thank_you_for_participating">Gràcies per participar!</string>
    <string name="map_settings">Configuració del mapa</string>
    <string name="start_date_heading">Data d\'inici</string>
    <string name="start_date">data d\'inici</string>
    <string name="limit_start_date">Determina la data \nd\'inici del mapa?</string>
    <string name="end_date_heading">Data final</string>
    <string name="end_date_text">Determina la data \nfinal del mapa?</string>
    <string name="end_date">data final</string>
    <string name="sat">Satèl·lit</string>
    <string name="use_sat_q">Utilitzar la imatge de satèl·lit?</string>
    <string name="acc">Precisió</string>
    <string name="toggleacc_q">Mostra la precisió de les localitzacions?</string>
    <string name="icons">Icones</string>
    <string name="display_icons_q">Mostra les icones?</string>
    <string name="data_settings_label">Configuració de les dades</string>
    <string name="storage_size_heading">Mida de la base de \ndades de l\'usuari.</string>
    <string name="volunteer">Vols ser un/a voluntari/a?</string>
    <string name="share_data_text">Comparteix les dades amb als investigadors?</string>
    <string name="participation_heading">Participació</string>
    <string name="participation_time_label">Durada total de la participació:</string>
    <string name="nlocations_shared_label">Quantitat de localitzacions compartits:</string>
    <string name="pending_uploads_heading">Càrregues \npendents</string>
    <string name="files_deleted">arxius esborrats</string>
    <string name="locations_deleted">localitzacions esborrades</string>
    <string name="calculating">calculant</string>
    <string name="available">disponibles</string>
    <string name="used">utilitzats</string>
    <string name="present">actualment</string>
    <string name="withdraw_message_pro">Has deixat de participar a l\'estudi. Pots tornar a participar-hi en qualsevol moment a través del menú de preferències. Gràcies pel teu interès i participació.</string>
    <string name="filenameprefix_map">meuSpaceMapperMapa</string>
    <string name="filenameprefix_csv">meveSpaceMapperLocalitzacions</string>
    <string name="more_info">més informació</string>
    <string name="currently_sharing">Actualment estàs compartint dades amb l\'Activity-Space Project. Aquesta configuració es pot canviar després d\'haver participat com a mínim una setmana i d`haver compartit almenys 1.000 estimacions de les teves localitzacions.</string>
    <string name="stats_button">Estadístiques</string>
    <string name="menu_asp">Activity-Space Project</string>
    <string name="saving_data">Guardant les dades.</string>
    <string name="database_updating_text">Actualitzant la base de dades. Si us plau, espera...</string>
    <string name="mapdata_loading_text">Carregant les dades de localització.</string>
    <string name="first_station_time_label">"Primera: "</string>
    <string name="latest_station_time_label">"Última: "</string>
    <string name="tracking_notification_initial">Enregistrant la teva mobilitat</string>
    <string name="tracking_notification">Enregistrant la teva mobilitat</string>
    <string name="tracking_notification_subject">Campus Mobility està gravant</string>
    <string name="menu_flush_gps">Actualitza GPS</string>
    <string name="renew_gps_alert">Voldries eliminar i baixar un nou A-GPS data ? Fer-ho millorarà el funcionament del GPS si tens una bona connexió de dades i el GPS sembla que no funciona correctament. No obstant, això pot resultar en un endarreriment en les estimacions de les teves localitzacions.</string>
    <string name="first_fix_time">Primer punt en l\'espai-temps:</string>
    <string name="last_fix_time">Últim punt en l\'espai-temps:</string>
    <string name="progress_text">Carregant dades. Si us plau, esperi...</string>
    <string name="message_store_data">Guardi meves dades està desactivat. Si us plau, aneu al menú de Preferències i encendre\'l si voleu crear una línia de vida.</string>
    <string name="message_no_data">No tenim encara dades suficients per construir una línia de vida. Recull almenys dues estimacions de localització i torni a intentar-ho.</string>
    <string name="toggle_zax">Eix temporal</string>
    <string name="toggle_xyax">Eix espacial</string>
    <string name="lifeline_button">L\'espai-temps</string>
    <string name="made_with_SM">Imatge fet amb l\'Campus Mobility</string>
    <string name="menu_share">Comparteix l\'aplicació</string>
    <string name="share_with">Comparteix via</string>
    <string name="rate_heading">Avaluar l\'Campus Mobility</string>
    <string name="rate_no">No, gràcies</string>
    <string name="rate_later">Recorda\'m-ho més tard</string>
    <string name="rate_yes">Avaluar l\'Campus Mobility</string>
    <string name="rate_prompt">Si t\'agrada utilitzar l\'Campus Mobility, si us plau dedica un moment per avaluar-lo. Gràcies pel teu suport!</string>
    <string name="menu_rate">Avaluar l\'aplicació</string>
    <string name="menu_map_save">Guardar el Mapa</string>
    <string name="menu_map_share">Compartir el Mapa</string>
    <string name="menu_map_settings">Configuració del Mapa</string>
    <string name="heading_map_interval">Interval</string>
    <string name="text_map_interval_spinner">Localitzacions al Mapa durant les últimes: </string>
    <string name="my_location">Localització</string>
    <string name="cancel">Anul.lar</string>
    <string name="time_label">Data i Hora: </string>
    <string name="lat_label">Latitud: </string>
    <string name="lon_label">Longitud: </string>
    <string name="alt_label">Altitud (m): </string>
    <string name="acc_label">Precisió (m): </string>
    <string name="prov_label">Proveïdor: </string>
    <string name="yes">si</string>
    <string name="no">no</string>
</resources>